# OpenCVTest

./: .gitignore  CMakeLists.txt  OpenCVTest.vcxproj  OpenCVTest.vcxproj.filters  README.md  algoFunc.cpp  algoFunc.h  testMain.cpp
demo/: handGesture.cpp  videoCapture.cpp
src/: Logger.hpp
